tests/ui/missing_comma.stderr
error: expected `;` or `,`
 --> tests/ui/missing_comma.rs:4:38
  |
4 |         AndMore = ::std::hash::Hash  ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
  |                                      ^

warning: unused macro definition: `AndMore`
 --> tests/ui/missing_comma.rs:4:9
  |
4 |         AndMore = ::std::hash::Hash  ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
  |         ^^^^^^^
  |
  = note: `#[warn(unused_macros)]` on by default

warning: unused macro definition: `Eq`
 --> tests/ui/missing_comma.rs:3:9
  |
3 |         Eq = ::core::cmp::Eq, ::core::cmp::PartialEq;
  |         ^^
